[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/ReplayMenu/ReplayMenu.gd" type="Script" id=1]

[node name="ReplayMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -300.0
margin_right = 400.0
margin_bottom = 300.0
rect_min_size = Vector2( 800, 600 )
custom_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 550.0
rect_min_size = Vector2( 800, 550 )
scroll_horizontal_enabled = false

[node name="FilesContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 800.0
margin_bottom = 550.0
rect_min_size = Vector2( 800, 550 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 560.0
margin_right = 800.0
margin_bottom = 564.0

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 574.0
margin_right = 800.0
margin_bottom = 594.0
custom_constants/separation = 20

[node name="PlayButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
margin_right = 38.0
margin_bottom = 20.0
text = "Play"

[node name="DeleteButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
margin_left = 58.0
margin_right = 113.0
margin_bottom = 20.0
text = "Delete"

[node name="Spacer" type="Control" parent="VBoxContainer/ButtonsContainer"]
margin_left = 133.0
margin_right = 565.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="OpenFolderButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
margin_left = 585.0
margin_right = 673.0
margin_bottom = 20.0
text = "Open folder"

[node name="SaveButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
margin_left = 693.0
margin_right = 800.0
margin_bottom = 20.0
text = "Save last game"

[connection signal="pressed" from="VBoxContainer/ButtonsContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/OpenFolderButton" to="." method="_on_OpenFolderButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
